--- a/index.css
+++ b/index.css
@@ -1,103 +1,117 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
-.main{
-background: url(public/images/main-page.webp);
-height: 100vh;
-margin-left: -7px;
-margin-top: -7px;
+
+.main {
+    background: url(public/images/main-page.webp);
+    height: 100vh;
+    margin-left: -7px;
+    margin-top: -7px;
 
 }
-.logo{
+
+.logo {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-ul{
+
+ul {
     list-style: none;
-  display: flex;
-  
+    display: flex;
+   
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
 }
 
-.logo-1 img{
+.logo-1 img {
     height: 80px;
     margin-top: 10px;
 }
-ul{
-    gap:20px;
+
+ul {
+    gap: 20px;
 }
-ul li  {
+
+ul li {
     font-size: 18px;
-    /* margin-top: 20px; */
+   
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
-li button{
+
+li button {
     width: 180px;
     padding: 10px;
     margin-top: -15px;
-   border-radius: 20px;
+    border-radius: 20px;
     background: none;
     text-align: center;
     font-size: 17 px;
-    border-width:0.5px;
+    border-width: 0.5px;
 }
-.jst a:hover{
+
+.jst a:hover {
     background-color: gainsboro;
 }
-.landing-page-content{
+
+.landing-page-content {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     height: 90vh;
 }
+
 .btn-logo:hover {
     background-color: black;
     color: white;
 }
 
 
-.tittle{
- font-family: Arial, Helvetica, sans-serif;
- color: white;
- font-size: 30px;
- 
+.tittle {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 30px;
+
 }
-.sub{
-   text-align: center; 
-   color: white;
-   font-size: 50px;
-   margin-top: 5px;
+
+.sub {
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    margin-top: 5px;
 }
-.su{
-  text-align: center; 
-  margin-top: 5px;  
-  
+
+.su {
+    text-align: center;
+    margin-top: 5px;
+
 }
-.btn-2{
-border: none;
- width: 180px;
+
+.btn-2 {
+    border: none;
+    width: 180px;
     padding: 15px;
     border-radius: 20px;
     margin-top: 20px;
 }
 
 
-.second{
-     display: flex;
+.second {
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     height: 45vh;
 }
-.second-1{
+
+.second-1 {
     font-size: 35px;
     font-family: sansarif;
     word-spacing: 5px;
@@ -105,170 +119,239 @@ border: none;
     text-align: center;
     line-height: 50px;
 }
-.second-2{
+
+.second-2 {
     font-size: 35px;
     margin-top: 5px;
 }
-.second-3{
-    margin-top: 5px;
-    font-size: 20px;
-     color: gray;
-}
-.second-4{
-    margin-top: 5px;
-    font-size: 20px;
-     color: gray;
-}
-.second-5{
+
+.second-3 {
     margin-top: 5px;
     font-size: 20px;
     color: gray;
 }
-.second-6{
+
+.second-4 {
+    margin-top: 5px;
+    font-size: 20px;
+    color: gray;
+}
+
+.second-5 {
+    margin-top: 5px;
+    font-size: 20px;
+    color: gray;
+}
+
+.second-6 {
     margin-top: 30px;
 }
-.link{
-    color:rgb(30, 103, 30);
-     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+.link {
+    color: rgb(30, 103, 30);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.slide-3{
-     display: flex;
-    justify-content:center;
-    gap:7%;
-    height:60vh;
+
+.slide-3 {
+    display: flex;
+    justify-content: center;
+    gap: 7%;
+    height: 60vh;
 }
-.matter{
+
+.matter {
     margin-top: 4%;
     text-align: center;
 
-    
+
 }
-.mtr-1{
+
+.mtr-1 {
     font-size: 20px;
     color: green;
     font-weight: bold;
 
 }
-.mtr-2{
-     font-size: 25px; 
-      margin-top: 3%;
+
+.mtr-2 {
+    font-size: 25px;
+    margin-top: 3%;
 }
-.mtr-3{
-  font-size: 25px; 
-  margin-top: 1%;  
+
+.mtr-3 {
+    font-size: 25px;
+    margin-top: 1%;
 }
-.mtr-4{
-   font-size: 25px; 
-   margin-top: 1%;  
+
+.mtr-4 {
+    font-size: 25px;
+    margin-top: 1%;
 }
-.mbtn-4{
+
+.mbtn-4 {
     width: 200px;
     padding: 10px;
-    border:none;
-     background-color: green;
+    border: none;
+    background-color: green;
     border-radius: 20px;
     margin-top: 2%;
     font-size: 20px;
-   
+
 }
-.mbtn-4 a{
+
+.mbtn-4 a {
     color: white;
 }
-.slide-4{
-  display: flex;
-    justify-content:center;
-    gap:18%;
-    height:60vh;
+
+.slide-4 {
+    display: flex;
+    justify-content: center;
+    gap: 18%;
+    height: 60vh;
 }
-.matter-1{
+
+.matter-1 {
     text-align: center;
     margin-top: 20%;
 
 }
-.matter-2{
+
+.matter-2 {
     position: relative;
-    right:120px;
+    right: 120px;
 }
-.img-1{
+
+.img-1 {
     width: 500px;
 }
-.f-above{
+
+.f-above {
     text-align: center;
     font-size: 25px;
 }
 
 .gallery-pics {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding: 20px;
 }
 
 .g-img-1 {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .jss {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  gap: 10px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
 }
 
 .top-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .jv {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
 
 .jv img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.container{
+
+.container {
     margin-left: 100px;
     margin-right: 100px;
     height: 80vh;
 }
-.footer-above{
-    margin-top: 350px;
+
+.footer-above {
+    margin-top: 480px;
     display: flex;
     justify-content: center;
     gap: 10%;
     height: 10vh;
 }
-.f-1{
-    font-size: 25px;
+
+.f-1 {
+    font-size: 30px;
     margin-top: 5px;
+    font-family: sanasrif;
 }
-.btn-fa{
+
+.btn-fa {
     width: 180px;
     padding: 15px;
-     border-radius: 20px;
-     border: none;
-     margin-top: -10px;
-       background-color: green;
+    border-radius: 20px;
+    border: none;
+    margin-top: -10px;
+    background-color: green;
+
+}
+
+.btn-fa a {
+
+    font-size: 20px;
+    color: white;
+}
+
+.ftr {
+    height: 200px;
+    width: 99vw;
+    background-color: rgb(78, 94, 102);
+    text-align: center;
+    gap: 10%;
+}
+.fb{
+    height: 40px;
+    width: 40px;
+    border-radius: 30px;
+}
+.social-media{
+    height: 60px;
+    width: 60px;
+    border-radius: 40px;
+   
     
 }
-.btn-fa a{
-    font-size: 15px;
-     color: white;
+.ftm-1{
+    padding: 18px;
+    font-size: 25px;
+    color: white;
+    word-spacing: 3px;
 }
+.ftm-2 img{
+    margin-top: 5px;
+   gap: 20%;
+   margin-left: 15px;
+}
+.ftm-3{
+    margin-top: 10px;
+     font-size: 25px;
+     color: white;
+     padding: 10px;
 
-
-
-
-
-
-
-
+}
+.ftm-3-1{
+    font-weight: bold;
+    font-size: 22px;
+}
+.ftm-3-2{
+    color: white;
+}
+.ftm-3-3{
+    color: white;
+}
+.ftm-3-4{
+     color: #00c65e;
+}
 
 
