gallery page modification

--- a/contact.css
+++ b/contact.css
@@ -37,10 +37,12 @@ a {
 
 ul {
     gap: 20px;
+    padding: 2px;
 }
 
 ul li {
     font-size: 18px;
+    padding: 10px;
 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
