--- a/about.css
+++ b/about.css
@@ -5,7 +5,7 @@
 }
 
 .main {
- 
+
   background-image: url('public/images/dora-1.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -65,6 +65,159 @@ li button {
 }
 
 .btn-logo:hover {
-    background-color: black;
+  background-color: black;
+  color: white;
+}
+
+.about-imp {
+  width: 800px;
+  height: 1400px;
+  background-color:white;
+  margin: 5px auto;
+  margin-top: -800px;
+}
+
+.tittle {
+  text-align: center;
+  padding-top: 50px;
+}
+
+.t-1 {
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  margin-bottom: 15px;
+  font-style: italic;
+}
+
+.t-2 {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.para-1 {
+  font-size: 17px;
+  line-height: 27px;
+  margin-top: 15px;
+  width: 600px;
+  margin: 10% auto;
+}
+
+.pic-1 {
+  display: grid;
+  grid-template-columns: 6fr 6fr;
+  width: 700px;
+}
+
+.hb {
+  width: 350px;
+  height: 180px;
+  margin-left: 90px;
+}
+
+.para-2 {
+  width: 350px;
+  margin-left: 10px;
+}
+
+.para-3 {
+  font-size: 17px;
+  line-height: 22px;
+  margin-left: 10px;
+  width: 300px;
+}
+
+.para-4 {
+  font-size: 17px;
+  line-height: 22px;
+  margin-left: 50px;
+}
+
+.para-5 {
+  margin-top: 15px;
+  font-size: 17px;
+  line-height: 27px;
+  margin-left: 50px;
+  word-spacing: 5px;
+  width: 700px;
+}
+.pic-2{
+  display: grid;
+  grid-template-columns: 6fr 6fr;
+  width: 700px;
+  margin-top: 20px;
+}
+.para-6{
+        font-size: 17px;
+        line-height: 27px;
+        margin-left: 50px;
+      
+    }
+ .hb-2{
+   width: 350px;
+  height: 180px;
+  margin-top: 20px;
+ } 
+ .para-7{
+  font-size: 17px;
+        line-height: 27px;
+        margin-left: 50px;
+        width: 700px;
+        margin-top: 15px;
+ }
+ .ftr {
+    height: 200px;
+    width: 98.5vw;
+    background-color: rgb(78, 94, 102);
+    text-align: center;
+    gap: 10%;
+    overflow: hidden;
+}
+.fb{
+    height: 40px;
+    width: 40px;
+    border-radius: 30px;
+}
+.social-media{
+    height: 40px;
+    width: 40px;
+    border-radius: 40px;
+   
+    
+}
+.ftm-1{
+    padding: 18px;
+    font-size: 25px;
+    color: white;
+    word-spacing: 3px;
+}
+.ftm-2 img{
+    margin-top: 5px;
+   gap: 20%;
+   margin-left: 15px;
+}
+.ftm-3{
+    margin-top: 10px;
+     font-size: 25px;
+     color: white;
+     padding: 10px;
+
+}
+.ftm-3-1{
+    font-weight: bold;
+    font-size: 22px;
+}
+.ftm-3-2{
     color: white;
 }
+.ftm-3-3{
+    color: white;
+}
+.ftm-3-4{
+     color: #00c65e;
+}
+ 
+
+
+
+ 
