--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@
 ul {
     list-style: none;
     display: flex;
-   
+
 }
 
 a {
@@ -40,23 +40,12 @@ ul {
 
 ul li {
     font-size: 18px;
-   
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 
-li button {
-    width: 180px;
-    padding: 10px;
-    margin-top: -15px;
-    border-radius: 20px;
-    background: none;
-    text-align: center;
-    font-size: 17 px;
-    border-width: 0.5px;
-}
 
-.jst a:hover {
+.tabs:hover {
     background-color: gainsboro;
 }
 
@@ -68,6 +57,21 @@ li button {
     height: 90vh;
 }
 
+.btn-logo {
+    display: inline-block;
+    width: 180px;
+    padding: 12px 0;
+    background-color: transparent;
+    color: black;
+    border: 0.5px solid black;
+    border-radius: 30px;
+    text-align: center;
+    transition: 0.3s ease;
+    font-size: 17px;
+    text-decoration: none;
+    margin-top: -14px;
+
+}
 .btn-logo:hover {
     background-color: black;
     color: white;
@@ -93,13 +97,24 @@ li button {
     margin-top: 5px;
 
 }
-
 .btn-2 {
-    border: none;
+    display: inline-block;
     width: 180px;
-    padding: 15px;
-    border-radius: 20px;
+    padding: 15px 0;
+    border-radius: 25px;
     margin-top: 20px;
+    color: black;
+    border: none;
+    font-size: 17px;
+    line-height: 27px;
+    text-align: center;
+    text-decoration: none;
+    background-color: white;
+}
+
+.btn-2:hover {
+    background-color: black;
+    color: white;
 }
 
 
@@ -302,6 +317,14 @@ li button {
     font-size: 20px;
     color: white;
 }
+.footer-above {
+    margin-top: 480px;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+    height: 10vh;
+   
+}
 
 .ftr {
     height: 200px;
@@ -310,48 +333,61 @@ li button {
     text-align: center;
     gap: 10%;
 }
-.fb{
-    height: 40px;
-    width: 40px;
-    border-radius: 30px;
-}
-.social-media{
+
+
+
+.social-media {
     height: 60px;
     width: 60px;
     border-radius: 40px;
-   
-    
+
+
 }
-.ftm-1{
+.social-media-1{
+    height: 78px;
+    width: 60px;
+    border-radius: 40px;
+}
+.social-media-2{
+     height: 68px;
+    width: 62px;
+    border-radius: 40px;
+}
+
+.ftm-1 {
     padding: 18px;
     font-size: 25px;
     color: white;
     word-spacing: 3px;
 }
-.ftm-2 img{
+
+.ftm-2 img {
     margin-top: 5px;
-   gap: 20%;
-   margin-left: 15px;
+    gap: 20%;
+    margin-left: 15px;
 }
-.ftm-3{
+
+.ftm-3 {
     margin-top: 10px;
-     font-size: 25px;
-     color: white;
-     padding: 10px;
+    font-size: 25px;
+    color: white;
+    padding: 10px;
 
 }
-.ftm-3-1{
+
+.ftm-3-1 {
     font-weight: bold;
     font-size: 22px;
 }
-.ftm-3-2{
+
+.ftm-3-2 {
     color: white;
 }
-.ftm-3-3{
+
+.ftm-3-3 {
     color: white;
 }
-.ftm-3-4{
-     color: #00c65e;
+
+.ftm-3-4 {
+    color: #00c65e;
 }
-
-
