--- a/offers.css
+++ b/offers.css
@@ -23,30 +23,34 @@ a {
 
 }
 
-li button {
+ .btn-logo {
+    display: inline-block;
     width: 180px;
-    padding: 10px;
-    margin-top: -15px;
-    border-radius: 20px;
-    background: none;
+    padding: 8px 0;
+    background-color: transparent;
+    color: black;
+    border: 0.5px solid black;
+    border-radius: 30px;
     text-align: center;
+    transition: 0.3s ease;
     font-size: 15px;
-    border-width: 0.5px;
+    text-decoration: none;
+    margin-top: -10px;
+   
+
 }
 
-.nav-btn {
-    margin-top: 15px;
-}
-
-.nav-btn a:hover {
-    background-color: gainsboro;
-}
-
-.btn-nav:hover {
+.btn-logo:hover{
     background-color: black;
     color: white;
 }
 
+.tabs:hover {
+    background-color: gainsboro;
+}
+.nav-btn {
+    margin-top: 15px;
+}
 .main-1 {
     margin-top: 30px;
     display: grid;
@@ -145,17 +149,23 @@ li button {
     gap: 10%;
     overflow: hidden;
 }
-.fb{
-    height: 40px;
-    width: 40px;
-    border-radius: 30px;
-}
-.social-media{
-    height: 40px;
-    width: 40px;
+
+.social-media-3{
+    height: 70px;
+    width: 60px;
     border-radius: 40px;
-   
-    
+
+
+}
+.social-media-1{
+    height: 60px;
+    width: 60px;
+    border-radius: 40px;
+}
+.social-media-2{
+     height: 60px;
+    width: 62px;
+    border-radius: 40px;
 }
 .ftm-1{
     padding: 18px;
