--- a/gallery.css
+++ b/gallery.css
@@ -104,78 +104,74 @@ li a {
 .thumb-carousel .active img {
     border-color: #198754;
 }
+
 .footer-above {
-    margin-top: 480px;
-    display: flex;
-    justify-content: center;
-    gap: 10%;
-    height: 10vh;
-   
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
+  padding: 30px 0;
 }
+
+.f-1 {
+  font-size: 24px;
+}
+
+.btn-fa {
+  padding: 15px 30px;
+  background-color: rgb(121, 166, 144);
+  color: white;
+  border: none;
+  border-radius: 20px;
+  font-size: 18px;
+  transition: 0.3s ease;
+}
+
+.btn-fa:hover {
+  background-color: rgb(90, 130, 110);
+}
+
 
 .ftr {
-    height: 230px;
-    width: 99vw;
-    background-color: rgb(78, 94, 102);
-    text-align: center;
-    gap: 10%;
-}
-
-
-
-.social-media {
-    height: 60px;
-    width: 60px;
-    border-radius: 40px;
-
-
-}
-.social-media-1{
-    height: 60px;
-    width: 60px;
-    border-radius: 40px;
-}
-.social-media-2{
-     height: 60px;
-    width: 62px;
-    border-radius: 40px;
+  background-color: rgb(78, 94, 102);
+  text-align: center;
+  padding: 30px 10px;
+  color: white;
 }
 
 .ftm-1 {
-    padding: 18px;
-    font-size: 25px;
-    color: white;
-    word-spacing: 3px;
+  font-size: 25px;
+  padding: 10px;
 }
 
 .ftm-2 img {
-    margin-top: 5px;
-    gap: 20%;
-    margin-left: 15px;
+  margin: 10px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  font-style: italic;
 }
 
 .ftm-3 {
-    margin-top: 10px;
-    font-size: 25px;
-    color: white;
-    padding: 10px;
-    
-
+  font-size: 20px;
+  margin-top: 20px;
+  font-style: italic;
 }
 
-.ftm-3-1 {
-    font-weight: bold;
-    font-size: 22px;
-}
-
-.ftm-3-2 {
-    color: white;
-}
 
 .ftm-3-3 {
-    color: white;
+  color: white;
 }
 
 .ftm-3-4 {
-    color: #00c65e;
+  color: #00c65e;
+  font-weight: bold;
+ text-underline-offset: none;
 }
+a{
+    text-decoration: none !important;
+}
+
+
+
