--- a/about.css
+++ b/about.css
@@ -11,6 +11,7 @@
   background-repeat: no-repeat;
   height: 150vh;
   width: 99vw;
+  margin-top: -10px;
 
 
 }
@@ -49,38 +50,39 @@ ul li {
 
 }
 
- .btn-logo {
-    display: inline-block;
-    width: 180px;
-    padding: 8px 0;
-    background-color: transparent;
-    color: black;
-    border: 0.5px solid black;
-    border-radius: 30px;
-    text-align: center;
-    transition: 0.3s ease;
-    font-size: 15px;
-    text-decoration: none;
-    margin-top: -10px;
-   
+.btn-logo {
+  display: inline-block;
+  width: 180px;
+  padding: 8px 0;
+  background-color: transparent;
+  color: black;
+  border: 0.5px solid black;
+  border-radius: 30px;
+  text-align: center;
+  transition: 0.3s ease;
+  font-size: 15px;
+  text-decoration: none;
+  margin-top: -10px;
+
 
 }
 
-.btn-logo:hover{
-    background-color: black;
-    color: white;
+.btn-logo:hover {
+  background-color: black;
+  color: white;
 }
 
 .tabs:hover {
-    background-color: gainsboro;
+  background-color: gainsboro;
 }
 
 .about-imp {
   width: 800px;
   height: 1400px;
-  background-color:white;
+  background-color: white;
   margin: 5px auto;
-  margin-top: -800px;
+  margin-top: 160px;
+  border-radius: 20px;
 }
 
 .tittle {
@@ -147,89 +149,109 @@ ul li {
   word-spacing: 5px;
   width: 700px;
 }
-.pic-2{
+
+.pic-2 {
   display: grid;
   grid-template-columns: 6fr 6fr;
   width: 700px;
   margin-top: 20px;
 }
-.para-6{
-        font-size: 17px;
-        line-height: 27px;
-        margin-left: 50px;
-      
-    }
- .hb-2{
-   width: 350px;
+
+.para-6 {
+  font-size: 17px;
+  line-height: 27px;
+  margin-left: 50px;
+
+}
+
+.hb-2 {
+  width: 350px;
   height: 180px;
   margin-top: 20px;
- } 
- .para-7{
+}
+
+.para-7 {
   font-size: 17px;
-        line-height: 27px;
-        margin-left: 50px;
-        width: 700px;
-        margin-top: 15px;
- }
- .ftr {
-    height: 200px;
-    width: 98.5vw;
-    background-color: rgb(78, 94, 102);
-    text-align: center;
-    gap: 10%;
-    overflow: hidden;
+  line-height: 27px;
+  margin-left: 50px;
+  width: 700px;
+  margin-top: 15px;
 }
+
+.ftr {
+  height: 200px;
+  width: 98.5vw;
+  background-color: rgb(78, 94, 102);
+  text-align: center;
+  gap: 10%;
+  overflow: hidden;
+}
+
 .social-media {
-    height: 60px;
-    width: 60px;
-    border-radius: 40px;
+  height: 60px;
+  width: 60px;
+  border-radius: 40px;
 
 
 }
-.social-media-1{
-    height: 78px;
-    width: 60px;
-    border-radius: 40px;
-}
-.social-media-2{
-     height: 68px;
-    width: 62px;
-    border-radius: 40px;
+
+.social-media-1 {
+  height: 78px;
+  width: 60px;
+  border-radius: 40px;
 }
 
-.ftm-1{
-    padding: 18px;
-    font-size: 25px;
-    color: white;
-    word-spacing: 3px;
+.social-media-2 {
+  height: 68px;
+  width: 62px;
+  border-radius: 40px;
 }
-.ftm-2 img{
-    margin-top: 5px;
-   gap: 20%;
-   margin-left: 15px;
+
+.ftm-1 {
+  padding: 18px;
+  font-size: 25px;
+  color: white;
+  word-spacing: 3px;
 }
-.ftm-3{
-    margin-top: 10px;
-     font-size: 25px;
-     color: white;
-     padding: 10px;
+
+.facebook {
+  height: 60px;
+width: 60px;
 
 }
-.ftm-3-1{
-    font-weight: bold;
-    font-size: 22px;
-}
-.ftm-3-2{
-    color: white;
-}
-.ftm-3-3{
-    color: white;
-}
-.ftm-3-4{
-     color: #00c65e;
-}
+.youtube {
+    height: 52px;
+  width: 55px;
  
 
+}
+.insta{
+      height: 68px;
+    width: 58px;
 
+}
 
- 
+.ftm-3 {
+  margin-top: 10px;
+  font-size: 25px;
+  color: white;
+  padding: 10px;
+
+}
+
+.ftm-3-1 {
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.ftm-3-2 {
+  color: white;
+}
+
+.ftm-3-3 {
+  color: white;
+}
+
+.ftm-3-4 {
+  color: #00c65e;
+}
