--- a/gallery.css
+++ b/gallery.css
@@ -145,13 +145,6 @@ li a {
   padding: 10px;
 }
 
-.ftm-2 img {
-  margin: 10px;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  font-style: italic;
-}
 
 .ftm-3 {
   font-size: 20px;
@@ -171,6 +164,23 @@ li a {
 }
 a{
     text-decoration: none !important;
+}
+
+.facebook {
+  height: 60px;
+width: 60px;
+
+}
+.youtube {
+    height: 52px;
+  width: 55px;
+ 
+
+}
+.insta{
+      height: 68px;
+    width: 58px;
+
 }
 
 
