--- a/index.css
+++ b/index.css
@@ -294,14 +294,23 @@ ul {
   font-size: 25px;
   padding: 10px;
 }
-
-.ftm-2 img {
-  margin: 10px;
-  width: 60px;
+.facebook {
   height: 60px;
-  border-radius: 50%;
-  font-style: italic;
+width: 60px;
+
 }
+.youtube {
+    height: 52px;
+  width: 55px;
+ 
+
+}
+.insta{
+      height: 68px;
+    width: 58px;
+
+}
+
 
 .ftm-3 {
   font-size: 20px;
@@ -318,3 +327,5 @@ ul {
   color: #00c65e;
   font-weight: bold;
 }
+
+
